# information-retrieval-search-engine

./: .clang-format  .dockerignore  .gitignore  Cargo.toml  README.md  pyproject.toml
Lab3/: main.cpp  run.sh
Lab4/: main.py  pyproject.toml  stopwords.py  trie.py
Lab5/: main.py  pyproject.toml
Lab6/: main.py
Lab8/: main.py  pyproject.toml
Labs/Lab1/: DB.session.sql  querries.md
Labs/Lab2/: main.cpp  run.sh
Labs/Lab3/: main.cpp  run.sh
Labs/Lab4/: main.py  pyproject.toml  stopwords.py
Labs/Lab6/: pyproject.toml
Labs/Lab7/: main.py  pyproject.toml
Labs/Lab9/: main.py
Proiect/: README.md  Service Diagram.drawio  docker-compose.yaml
Proiect/crawler/: .env  Dockerfile  main.py  models.py  pyproject.toml
Proiect/docker-volume/: .gitignore
Proiect/docker-volume/sites/: .gitignore
Proiect/indexerd/: .gitignore  Dockerfile  main.py  pyproject.toml
Proiect/url_frontier/: .env  Dockerfile  main.py  models.py  pyproject.toml
Proiect/web-search/: .env  Dockerfile  README.md  app.py  pyproject.toml
Proiect/web-search/templates/: index.html
data/files/: .gitignore  a.txt
scripts/: README.md  pyproject.toml
scripts/src/scripts/: __init__.py  clangd.py
