[project]
name = "ri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]
trie = { workspace = true }
scripts = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
 "Lab4",
 "Lab5",
 "Lab6",
 "scripts",
 "Lab7",
 "Lab8",
 "Lab9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "scripts",
]
