[project]
name = "ri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.sources]
trie = { workspace = true }
scripts = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
    "scripts",
    "Labs/Lab4",
    "Labs/Lab5",
    "Labs/Lab6",
    "Labs/Lab7",
    "Labs/Lab8",
    "Labs/Lab9",
    "Proiect/*",
]
exclude = ["Proiect/docker-volume"]

[dependency-groups]
dev = ["ruff>=0.11.2", "scripts"]
