[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Mițca Dumitru", email = "dumitru0mitca@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
clangd = "scripts:clangd"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
