[project]
name = "url-frontier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.0",
    "robotstxt",
    "sortedcontainers>=2.4.0",
    "urllib3-future>=2.12.922",
]

[tool.uv.sources]
robotstxt = { workspace = true }
